--- a/Haring_client/src/App.css
+++ b/Haring_client/src/App.css
@@ -483,7 +483,7 @@ body::-webkit-scrollbar-thumb:vertical {
     flex-direction: row;
     justify-content: space-evenly;
     background-color: transparent;
-    height: 100%;
+    height: 70%;
     width: 100%;
     padding-top: 5vh;
 }
@@ -494,7 +494,7 @@ body::-webkit-scrollbar-thumb:vertical {
     text-decoration: none;
     width: 45vw;
     
-    height: 55%;
+    height: 100%;
     overflow: auto;
     border: 2px solid tomato;
     border-radius: 2px;
@@ -531,6 +531,112 @@ body::-webkit-scrollbar-thumb:vertical {
     width: 100%;
 }
 
+.sub-form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: transparent;
+    height: 100vh;
+    width: 100vw;
+    padding-top: 30vh;
+}
+
+.sub-form-container > h1 {
+    color: tomato;
+    font-size: 60px;
+    font-weight: 600;
+    text-align: center;
+    text-decoration: none;
+    -webkit-text-stroke: 1.5px black;
+}
+
+.sub-form-container > form {
+    display: flex;
+    flex-direction: column;
+    padding: 25px;
+    background-color: transparent;
+    height: 60vh;
+    width: 50vw;
+    border: 1.5px solid tomato;
+    box-shadow: 10px 10px 10px black;
+}  
+.sub-form > * {
+    margin: 10px;
+}
+
+.sub-form > input,
+.sub-form > textarea {
+    padding: 0.5rem;
+    line-height: 1;
+    border: 2px solid tomato;
+    background-color: rgb(244, 244, 244);
+    border-bottom: .5px solid rgba(217, 217, 217, 0.75);
+    border-right: .5px solid rgba(217, 217, 217, 0.75);
+    border-radius: 2.5px;
+    font-size: 1rem;
+    width: 98%;
+    margin-right: 20px;
+    box-shadow: -1px -1px 10px rgba(217, 217, 217, 0.75) inset;
+    transition: outline 1s ease, 
+                color 1s ease,
+                border-radius 1s ease,
+                box-shadow 1s ease-in-out;
+}
+
+.format-form > textarea {
+    padding: 0.5rem;
+    line-height: 1.75;
+    border: 2px solid tomato;
+    background-color: rgb(244, 244, 244);
+    border-bottom: .5px solid rgba(217, 217, 217, 0.75);
+    border-right: .5px solid rgba(217, 217, 217, 0.75);
+    border-radius: 2.5px;
+    font-size: 1rem;
+    width: 50%;
+    margin-right: 20px;
+    box-shadow: -1px -1px 10px rgba(217, 217, 217, 0.75) inset;
+    transition: outline 1s ease, 
+                color 1s ease,
+                border-radius 1s ease,
+                box-shadow 1s ease-in-out;
+
+
+}
+
+.format-form > textarea:focus,
+.sub-form > input:focus,
+.sub-form > textarea:focus {
+    outline: none;
+    color: tomato;
+    border-radius: 20px;
+    border: 1px solid tomato;
+    box-shadow: 5px 5px 1px tomato;
+    transition: outline 0.75s ease, 
+                color 0.75s ease,
+                border-radius 0.75s ease,
+                box-shadow 0.75s ease;
+
+}
+
+.format-form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-content: center;
+    justify-content: space-between;
+    background-color: transparent;
+    height: 100%;
+    width: 100%;
+}
+
+.comment-section {
+    display: flex;
+    flex-direction: column;
+    background-color: transparent;
+    height: 100%;
+    width: 100%;
+    padding-top: 5vh;
+}
 
 
 
