--- a/Haring_client/src/App.css
+++ b/Haring_client/src/App.css
@@ -66,6 +66,16 @@ body::-webkit-scrollbar-thumb:vertical {
     font-size: calc(2rem + 6vw);
 }
 
+.header h1:hover {
+    cursor: pointer;
+    color: transparent;
+    text-decoration: none;
+    -webkit-text-stroke: 2px tomato;
+    filter: drop-shadow(0 0 .1rem grey);
+    transform: scale(1.1);
+    transition: all 1s ease-in-out;
+}
+
 .head-txt {
     display: flex;
     flex-direction: row;
@@ -360,7 +370,7 @@ body::-webkit-scrollbar-thumb:vertical {
     align-items: left;
     background-color: transparent;
     height: 100%;
-    width: 81%;
+    width: 80%;
 
 }
 
@@ -391,7 +401,7 @@ body::-webkit-scrollbar-thumb:vertical {
     justify-content: space-evenly;
     background-color: transparent;
     height: 100%;
-    width: 99%;
+    width: 100%;
 
 }
 .community-card:hover {
@@ -906,11 +916,78 @@ body::-webkit-scrollbar-thumb:vertical {
 .templates-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
     background-color: transparent;
     height: 100vh;
     width: 100vw;
     padding-top: 30vh;
+}
+
+.templates-container > h1 {
+    color: tomato;
+    font-size: calc(3rem + 3vw);
+    font-weight: 600;
+    text-align: left;
+    text-decoration: none;
+    -webkit-text-stroke: 1.5px black;
+    margin-left: 3vw;
+}
+
+.spread-divider {
+    color: tomato;
+    font-size: calc(5rem + 5vw);
+    font-weight: 600;
+    text-align: center;
+    text-decoration: none;
+    margin-bottom: 5vh;
+    -webkit-text-stroke: 1.5px black;
+
+}
+
+.template-card {
+    margin-bottom: 13vh;
+    height: 75vh;
+    margin-left: 3vw;
+    margin-right: 3vw;
+    margin-top: 2vh;
+}
+
+.template-card-2 {
+    margin-bottom: 15vh;
+    height: 75vh;
+    margin-left: 3vw;
+    margin-right: 3vw;
+}
+
+.template-card-3 {
+    margin-bottom: 13vh;
+    height: 75vh;
+    margin-left: 3vw;
+    margin-right: 3vw;
+    
+}
+
+
+.template-card-4 {
+    margin-top: 27vh;
+    margin-bottom: 7vh;
+    height: 100vh;
+    margin-left: 3vw;
+    margin-right: 3vw;
+}
+.template-card-5 {
+    height: 75vh;
+    margin-left: 3vw;
+    margin-right: 3vw;
+}
+
+
+.template-card-6 {
+    margin-top: 43vh;
+    height: 75vh;
+    margin-bottom: 12vh;
+    margin-left: 3vw;
+    margin-right: 3vw;
+
 }
 
 .code-container-def {
@@ -919,7 +996,7 @@ body::-webkit-scrollbar-thumb:vertical {
     text-decoration: none;
     width: 45vw;
     overflow: scroll;
-    height: 15%;
+    height: 100%;
     overflow: auto;
     border: 2px solid tomato;
     border-radius: 2px;
@@ -935,3 +1012,53 @@ body::-webkit-scrollbar-thumb:vertical {
     text-decoration: none;
     
 }
+
+.code-display-def {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: transparent;
+    height: 70%;
+    width: 100%;
+    padding-top: 5vh;
+    margin-right: 3vw;
+}
+
+.template-card > h2,
+.template-card-2 > h2,
+.template-card-3 > h2,
+.template-card-4 > h2,
+.template-card-5 > h2,
+.template-card-6 > h2 {
+    color: tomato;
+    font-size: 45px;
+    font-weight: 600;
+    text-align: left;
+    text-decoration: none;
+    
+}
+
+.elm-type-lbl {
+    color: rgb(183, 73, 54);
+    font-size: 16px;
+    font-weight: 600;
+    font-style: italic;
+    text-align: left;
+    text-decoration: none;
+    background-color: transparent;
+    line-height: 1.5;
+    margin-bottom: 2vh;
+}
+
+.temp-desc {
+    font-size: 18px;
+    font-weight: 600;
+    text-align: left;
+    text-decoration: none;
+    overflow: hidden;
+    line-height: 1.5;
+    margin-bottom: 2vh;
+    text-align: justify;
+    
+}
+
