--- a/Haring_client/src/templates/styling/Checkbox.css
+++ b/Haring_client/src/templates/styling/Checkbox.css
@@ -1,8 +1,11 @@
 .checkbox-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  margin-top: 30px;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 30px;
+    background-color: whitesmoke;
+    border: 2px solid tomato;
+    height: 20%;
+    width: 100%;
 }
 
 .checkbox-primary,
