--- a/Haring_client/src/templates/styling/Select.css
+++ b/Haring_client/src/templates/styling/Select.css
@@ -4,6 +4,11 @@
     align-items: center;
     margin-bottom: 1rem;
     margin-top: 1rem;
+    padding: 30px;
+    background-color: whitesmoke;
+    border: 2px solid tomato;
+    height: 20%;
+    width: 100%;
 }
 
 .select-primary,
@@ -27,8 +32,8 @@
     color: blue;
     border-radius: 2.5px;
     border: 2px solid blue;
-    border-top: none;
-    border-left: none;
+    border-top: .5px solid rgba(217, 217, 217, 0.75);
+    border-left: .5px solid rgba(217, 217, 217, 0.75);
     box-shadow: 5px 5px 1px rgba(0, 0, 255, 0.631);
     transition: outline 0.75s ease, 
               color 0.75s ease,
